--- a/src/components/core/HeaderGithubButton.astro
+++ b/src/components/core/HeaderGithubButton.astro
@@ -21,7 +21,7 @@ Astro.props as HeaderGithubButtonProps;
         <Icon name="github" class="size-5" />
         <span
             id="github-star-count"
-            class="text-xs font-medium text-muted-foreground hidden"
+            class="text-muted-foreground hidden text-xs font-medium"
             aria-live="polite"></span>
     </a>
 </Button>
