--- a/src/components/core/ThemeToggle.astro
+++ b/src/components/core/ThemeToggle.astro
@@ -15,10 +15,7 @@ Astro.props as ThemeToggleProps;
     className="relative"
     aria-label="Toggle theme"
 >
-    <Icon
-        name="theme"
-        class="size-5 transition-transform duration-200 dark:rotate-180"
-    />
+    <Icon name="theme" class="size-5 transition-transform duration-200 dark:rotate-180" />
     <span class="sr-only">Toggle theme</span>
 </Button>
 
