--- a/src/components/docs/TableOfContentsExtra.astro
+++ b/src/components/docs/TableOfContentsExtra.astro
@@ -4,20 +4,16 @@ import { Icon } from "astro-icon/components";
 ---
 
 <section
-  class="rounded-lg bg-linear-to-br from-blue-500 to-cyan-400 p-6 overflow-y-hidden h-[calc((100vh-5.25rem)*0.33)]"
+    class="h-[calc((100vh-5.25rem)*0.33)] overflow-y-hidden rounded-lg bg-linear-to-br from-blue-500 to-cyan-400 p-6"
 >
-  <div class="flex flex-col justify-evenly items-center gap-2 h-full">
-    <Icon name="github" class="size-8 text-background" />
-    <p class="m-0 font-bold text-lg text-background">Love this project?</p>
-    <p class="m-0 text-sm font-medium text-background/90 text-center">
-      Support CelestialDocs and help me keep building.
-    </p>
-    <a
-      href="https://github.com/sponsors/HYP3R00T"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      <Button variant="secondary" size="lg">Sponsor</Button>
-    </a>
-  </div>
+    <div class="flex h-full flex-col items-center justify-evenly gap-2">
+        <Icon name="github" class="text-background size-8" />
+        <p class="text-background m-0 text-lg font-bold">Love this project?</p>
+        <p class="text-background/90 m-0 text-center text-sm font-medium">
+            Support CelestialDocs and help me keep building.
+        </p>
+        <a href="https://github.com/sponsors/HYP3R00T" target="_blank" rel="noopener noreferrer">
+            <Button variant="secondary" size="lg">Sponsor</Button>
+        </a>
+    </div>
 </section>
