--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,10 +5,8 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 <BaseLayout>
     <main class="flex items-center justify-center p-6">
         <div class="max-w-md text-center">
-            <h1 class="text-4xl font-bold mb-2">404 - Page not found</h1>
-            <p class="mb-4">
-                Sorry, we couldn't find the page you're looking for.
-            </p>
+            <h1 class="mb-2 text-4xl font-bold">404 - Page not found</h1>
+            <p class="mb-4">Sorry, we couldn't find the page you're looking for.</p>
         </div>
     </main>
 </BaseLayout>
